--- a/core/templates/_base.html
+++ b/core/templates/_base.html
@@ -9,6 +9,7 @@
     <title>Presupuestos Municipales Abiertos</title>
 
     <!-- CSS de Bootstrap -->
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap-theme.css' %}">
     <link rel="stylesheet" href="{% static 'css/pma.css' %}">
