--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -4,6 +4,10 @@
 {% load staticfiles %}
 {% block custom_header_links %}
 <link rel="stylesheet" href="{% static 'css/pe-icon-7-stroke.css' %}">
+<link rel="stylesheet" href="{% static 'css/linea_basic.css' %}">
+<link rel="stylesheet" href="{% static 'css/linea_arrows.css' %}">
+<link rel="stylesheet" href="{% static 'css/linea_software.css' %}">
+<link rel="stylesheet" href="{% static 'css/linea_ecommerce.css' %}">
 {% endblock %}
 
 
